--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     
     <div id="showcase">
         <video autoplay muted loop>
-            <source src="/vid/vesmír 1440p_ Vytvořeno pomocí aplikace Clipchamp.mp4" type="video/mp4">
+            <source src="vesmír 1440p_ Vytvořeno pomocí aplikace Clipchamp.mp4" type="video/mp4">
         </video>
         <div class="showcase-content">
             <h1 class="l-heading">Vítejte ve vesmíru!</h1>
