--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
     <div class="video-section">
         <video controls width="100%">
-            <source src="vid/První video v premieře.mp4" type="video/mp4">
+            <source src="První video v premieře.mp4" type="video/mp4">
             Váš prohlížeč nepodporuje video tag.
         </video>
     </div>
